--- a/main.ui
+++ b/main.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>ViewShow</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,6,1" columnstretch="1,6,1">
    <property name="margin">
     <number>0</number>
    </property>
@@ -23,7 +23,7 @@
    <item row="0" column="0">
     <widget class="QWidget" name="topLeftGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -35,16 +35,21 @@
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-bottom: 3px;
-margin-right: 3px;</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-bottom: 3px;
+	margin-right: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QWidget" name="topGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+      <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -60,7 +65,7 @@ margin-right: 3px;</string>
 	background-color: rgba(32, 255, 8, 95);
 	margin-bottom: 3px;
 }
-QWidget:hover{
+QWidget:hover {
 	background-color: rgba(32, 8, 255, 95);
 }</string>
      </property>
@@ -69,7 +74,7 @@ QWidget:hover{
    <item row="0" column="2">
     <widget class="QWidget" name="topRightGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -81,17 +86,21 @@ QWidget:hover{
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-bottom: 3px;
-margin-left: 3px;
-</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-bottom: 3px;
+	margin-left: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QWidget" name="leftGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -103,9 +112,13 @@ margin-left: 3px;
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-right: 3px;
-</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-right: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
@@ -134,7 +147,7 @@ margin-right: 3px;
    <item row="1" column="2">
     <widget class="QWidget" name="rightGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -146,15 +159,20 @@ margin-right: 3px;
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-left: 3px;</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-left: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QWidget" name="bottomLeftGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -166,16 +184,21 @@ margin-left: 3px;</string>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-top: 3px;
-margin-right: 3px;</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-top: 3px;
+	margin-right: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QWidget" name="bottomGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+      <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -187,16 +210,20 @@ margin-right: 3px;</string>
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-top: 3px;
-</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-top: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QWidget" name="bottomRightGrip" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -208,10 +235,14 @@ margin-top: 3px;
       </size>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgba(32, 255, 8, 95);
-margin-top: 3px;
-margin-left: 3px;
-</string>
+      <string notr="true">QWidget {
+	background-color: rgba(32, 255, 8, 95);
+	margin-top: 3px;
+	margin-left: 3px;
+}
+QWidget:hover {
+	background-color: rgba(32, 8, 255, 95);
+}</string>
      </property>
     </widget>
    </item>
