--- a/main.ui
+++ b/main.ui
@@ -13,6 +13,14 @@
   <property name="windowTitle">
    <string>ViewShow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">.QWidget {
+	background-color: rgba(32, 255, 8, 95);
+}
+.QWidget:hover {
+	background-color: rgba(42, 206, 42, 95);
+}</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="1,6,1" columnstretch="1,6,1">
    <property name="margin">
     <number>0</number>
@@ -39,14 +47,9 @@
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-bottom: 3px;
-	margin-right: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-bottom: 3px;
+margin-right: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -69,13 +72,8 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-bottom: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-bottom: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -98,14 +96,9 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-bottom: 3px;
-	margin-left: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-bottom: 3px;
+margin-left: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -128,44 +121,8 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-right: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="centerLabel">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>30</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="toolTip">
-      <string>Drag to move
-Double click to start screen recording</string>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-}
-QWidget:hover {
-	background-color: rgba(255, 32, 8, 95);
-}</string>
-     </property>
-     <property name="text">
-      <string/>
+      <string notr="true">margin-right: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -188,13 +145,8 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-left: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-left: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -217,14 +169,9 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-top: 3px;
-	margin-right: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-top: 3px;
+margin-right: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -247,13 +194,8 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-top: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-top: 3px;
+</string>
      </property>
     </widget>
    </item>
@@ -276,19 +218,130 @@ QWidget:hover {
 Double-click to maximize/restore</string>
      </property>
      <property name="styleSheet">
-      <string notr="true">QWidget {
-	background-color: rgba(32, 255, 8, 95);
-	margin-top: 3px;
-	margin-left: 3px;
-}
-QWidget:hover {
-	background-color: rgba(32, 8, 255, 95);
-}</string>
+      <string notr="true">margin-top: 3px;
+margin-left: 3px;
+</string>
      </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QWidget" name="centerGrip" native="true">
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="1">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>90</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="0" rowspan="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>150</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="1" alignment="Qt::AlignHCenter">
+       <widget class="QPushButton" name="startButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="toolTip">
+         <string>Start screen recording</string>
+        </property>
+        <property name="text">
+         <string>Start</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2" rowspan="2">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>150</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="2" column="1" alignment="Qt::AlignHCenter">
+       <widget class="QPushButton" name="quitButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="text">
+         <string>Quit</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>90</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>quitButton</sender>
+   <signal>clicked()</signal>
+   <receiver>Dialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>286</x>
+     <y>322</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>286</x>
+     <y>195</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
