--- a/main.ui
+++ b/main.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>screenSelection</class>
+ <widget class="QDialog" name="screenSelection">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,10 +14,10 @@
    <string>ViewShow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">.QWidget {
+   <string notr="true">#centerGrip,#topLeftGrip,#topGrip,#topRightGrip,#rightGrip,#bottomRightGrip,#bottomGrip,#bottomLeftGrip,#leftGrip {
 	background-color: rgba(32, 255, 8, 95);
 }
-.QWidget:hover {
+#centerGrip:hover,#topLeftGrip:hover,#topGrip:hover,#topRightGrip:hover,#rightGrip:hover,#bottomRightGrip:hover,#bottomGrip:hover,#bottomLeftGrip:hover,#leftGrip:hover {
 	background-color: rgba(42, 206, 42, 95);
 }</string>
   </property>
@@ -255,23 +255,16 @@ margin-left: 3px;
       </item>
       <item row="1" column="1" alignment="Qt::AlignHCenter">
        <widget class="QPushButton" name="startButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>50</height>
-         </size>
-        </property>
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
         </property>
         <property name="toolTip">
          <string>Start screen recording</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">.QPushButton {
+	padding: 15px;
+}</string>
         </property>
         <property name="text">
          <string>Start</string>
@@ -293,14 +286,13 @@ margin-left: 3px;
       </item>
       <item row="2" column="1" alignment="Qt::AlignHCenter">
        <widget class="QPushButton" name="quitButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">.QPushButton {
+	padding: 5px;
+}</string>
         </property>
         <property name="text">
          <string>Quit</string>
@@ -330,7 +322,7 @@ margin-left: 3px;
   <connection>
    <sender>quitButton</sender>
    <signal>clicked()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>screenSelection</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
