--- a/main.ui
+++ b/main.ui
@@ -17,9 +17,7 @@
    <string notr="true">#centerGrip,#topLeftGrip,#topGrip,#topRightGrip,#rightGrip,#bottomRightGrip,#bottomGrip,#bottomLeftGrip,#leftGrip {
 	background-color: rgba(32, 255, 8, 95);
 }
-#centerGrip:hover,#topLeftGrip:hover,#topGrip:hover,#topRightGrip:hover,#rightGrip:hover,#bottomRightGrip:hover,#bottomGrip:hover,#bottomLeftGrip:hover,#leftGrip:hover {
-	background-color: rgba(42, 206, 42, 95);
-}</string>
+</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="1,6,1" columnstretch="1,6,1">
    <property name="margin">
@@ -226,6 +224,9 @@ margin-left: 3px;
    </item>
    <item row="1" column="1">
     <widget class="QWidget" name="centerGrip" native="true">
+     <property name="toolTip">
+      <string>Double-click to maximize/restore</string>
+     </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="1">
        <spacer name="verticalSpacer">
