--- a/ui/main.ui
+++ b/ui/main.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>ViewShow</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icons/monitor.png</normaloff>icons/monitor.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">#centerGrip,#topLeftGrip,#topGrip,#topRightGrip,#rightGrip,#bottomRightGrip,#bottomGrip,#bottomLeftGrip,#leftGrip {
 	background-color: rgba(32, 255, 8, 95);
@@ -235,32 +239,19 @@ margin-left: 3px;
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>20</width>
-          <height>90</height>
+          <width>132</width>
+          <height>49</height>
          </size>
         </property>
        </spacer>
       </item>
-      <item row="1" column="0" rowspan="2">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>150</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="1" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="startButton">
+      <item row="1" column="1">
+       <widget class="QPushButton" name="makeScreenshotButton">
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
         </property>
         <property name="toolTip">
-         <string>Start screen recording</string>
+         <string>Make screenshot (Enter)</string>
         </property>
         <property name="styleSheet">
          <string notr="true">.QPushButton {
@@ -268,27 +259,81 @@ margin-left: 3px;
 }</string>
         </property>
         <property name="text">
-         <string>Start</string>
+         <string>Make screenshot</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons/image.png</normaloff>icons/image.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
         </property>
        </widget>
       </item>
-      <item row="1" column="2" rowspan="2">
+      <item row="2" column="0" rowspan="2">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>126</width>
+          <height>99</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="startRecordingButton">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="toolTip">
+         <string>Start screen recording (Shift+Enter)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">.QPushButton {
+	padding: 15px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Start recording</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons/film.png</normaloff>icons/film.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" rowspan="2">
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>150</width>
-          <height>20</height>
+          <width>125</width>
+          <height>99</height>
          </size>
         </property>
        </spacer>
       </item>
-      <item row="2" column="1" alignment="Qt::AlignHCenter">
+      <item row="3" column="1">
        <widget class="QPushButton" name="quitButton">
         <property name="focusPolicy">
          <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="toolTip">
+         <string>Quit</string>
         </property>
         <property name="styleSheet">
          <string notr="true">.QPushButton {
@@ -298,17 +343,23 @@ margin-left: 3px;
         <property name="text">
          <string>Quit</string>
         </property>
+        <property name="iconSize">
+         <size>
+          <width>32</width>
+          <height>32</height>
+         </size>
+        </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>20</width>
-          <height>90</height>
+          <width>132</width>
+          <height>48</height>
          </size>
         </property>
        </spacer>
@@ -319,22 +370,5 @@ margin-left: 3px;
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>quitButton</sender>
-   <signal>clicked()</signal>
-   <receiver>screenSelection</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>286</x>
-     <y>322</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>286</x>
-     <y>195</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
