--- a/ui/main.ui
+++ b/ui/main.ui
@@ -272,6 +272,9 @@ margin-left: 3px;
           <height>32</height>
          </size>
         </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="0" rowspan="2">
@@ -314,6 +317,9 @@ margin-left: 3px;
           <height>32</height>
          </size>
         </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="3" rowspan="2">
@@ -351,6 +357,9 @@ margin-left: 3px;
           <height>24</height>
          </size>
         </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="3" column="2">
@@ -378,6 +387,9 @@ margin-left: 3px;
           <width>24</width>
           <height>24</height>
          </size>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
