--- a/ui/main.ui
+++ b/ui/main.ui
@@ -232,6 +232,9 @@ margin-left: 3px;
       <string>Double-click to maximize/restore</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
+      <property name="margin">
+       <number>0</number>
+      </property>
       <item row="0" column="1" colspan="2">
        <spacer name="verticalSpacer">
         <property name="orientation">
